# Guide-FastAPI_Web_Framework

./: README.md
chapters/0-Setup/: .gitignore  README.md  pyproject.toml
chapters/0-Setup/api/: main.py
chapters/1-Dependencies/: README.md  pyproject.toml
chapters/1-Dependencies/api/: main.py
chapters/2-HTML/: README.md  pyproject.toml
chapters/2-HTML/api/: main.py
chapters/2-HTML/templates/: base.html
chapters/3-CSS/: README.md
chapters/3-CSS/templates/: base.html
chapters/4-JavaScript/: README.md
chapters/4-JavaScript/api/: main.py
chapters/4-JavaScript/static/: script.js
chapters/4-JavaScript/templates/: base.html  index.html
chapters/5-Plot/: README.md  pyproject.toml
chapters/5-Plot/api/: main.py
chapters/5-Plot/static/: script.js  style.css
chapters/5-Plot/templates/: index.html
